--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,17 @@
-apply plugin: 'com.android.application'
+plugins {
+    id 'com.android.application'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.cloudappsync.ultra"
         minSdkVersion 23
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -25,13 +29,17 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        dataBinding true
+    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -61,20 +69,28 @@ dependencies {
 
     //data controllers
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.ralphpina:Android-Permissions-Manager:v2.0.1'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
     implementation 'org.jsoup:jsoup:1.12.2'
     implementation 'commons-net:commons-net:3.7.2'
-
-    //work manager
-    implementation "androidx.work:work-runtime:2.4.0"
 
     //anr watchdogs
     implementation 'com.github.anrwatchdog:anrwatchdog:1.4.0'
 
     //pr downloader
     implementation 'com.mindorks.android:prdownloader:0.6.0'
+
+    //lifecycle
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+
+    //room and rxjava
+    implementation 'androidx.room:room-runtime:2.2.6'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+    implementation 'androidx.room:room-rxjava2:2.2.6'
+
+    //rx java
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
 
     //apache file IO
     implementation 'commons-io:commons-io:2.7'
@@ -85,5 +101,3 @@ dependencies {
 
 }
 
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
