--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,14 @@ plugins {
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "29"
 
     defaultConfig {
         applicationId "com.cloudappsync.ultra"
         minSdkVersion 24
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.2"
+        versionCode 3
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,24 +30,18 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
-    buildFeatures {
-        dataBinding true
-    }
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.navigation:navigation-fragment:2.3.2'
-    implementation 'androidx.navigation:navigation-ui:2.3.2'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //local nosql storage
     implementation 'io.paperdb:paperdb:2.1'
@@ -59,7 +53,6 @@ dependencies {
     implementation 'com.wang.avi:library:2.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.opencsv:opencsv:4.6'
-    implementation 'mobi.upod:time-duration-picker:1.1.3'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 
     //firebase
@@ -81,19 +74,10 @@ dependencies {
     //pr downloader
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
-    //lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-
-    //room and rxjava
-    implementation 'androidx.room:room-runtime:2.2.6'
-    annotationProcessor 'androidx.room:room-compiler:2.2.6'
-    implementation 'androidx.room:room-rxjava2:2.2.6'
-
-    //rx java
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
-
     //apache file IO
     implementation 'commons-io:commons-io:2.7'
+
+    implementation 'com.github.wwdablu:wZip:1.0.1'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
